Fix header alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,9 +27,12 @@ h2 {
     color: #252525
 }
 
-.container {
-    padding-top: 10px;
-    padding-bottom: 10px;
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .logo {
